# xfce-dmbtimer-plugin

./: .gitignore  CMakeLists.txt  README
panel-plugin/: CMakeLists.txt  dmb.c  dmb_configure.c  dmb_configure.h  dmb_dialogs.c  dmb_dialogs.h  dmb_help_func.h  dmb_renew.c  dmb_renew.h  dmb_shared.h  dmbcounter.desktop
scripts/: install.sh  uninstall.sh
